// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NoteList /> matches second snapshot 1`] = `
<Fragment>
  <Styled(ForwardRef(Grid))
    item={true}
    key="2"
    xs={12}
  >
    <Note
      depth={2}
      note={
        Object {
          "archived": false,
          "body": "The Body",
          "created_at": "",
          "id": 2,
          "parent_note_id": 0,
          "pinned": false,
          "tags": Array [],
          "title": "SingleNote 2",
          "updated_at": "",
          "user_id": -1,
        }
      }
      search="SingleNote 2"
    />
  </Styled(ForwardRef(Grid))>
  <Styled(ForwardRef(Grid))
    item={true}
    key="1"
    xs={12}
  >
    <Note
      depth={2}
      note={
        Object {
          "archived": false,
          "body": "The Body",
          "created_at": "",
          "id": 1,
          "parent_note_id": 0,
          "pinned": false,
          "tags": Array [],
          "title": "SingleNote 1",
          "updated_at": "",
          "user_id": -1,
        }
      }
      search="SingleNote 2"
    />
  </Styled(ForwardRef(Grid))>
  <Styled(ForwardRef(Grid))
    item={true}
    key="4"
    xs={12}
  >
    <Note
      depth={2}
      note={
        Object {
          "archived": false,
          "body": "The Body",
          "created_at": "",
          "id": 4,
          "parent_note_id": 0,
          "pinned": false,
          "tags": Array [],
          "title": "SingleNote 4",
          "updated_at": "",
          "user_id": -1,
        }
      }
      search="SingleNote 2"
    />
  </Styled(ForwardRef(Grid))>
</Fragment>
`;

exports[`<NoteList /> matches snapshot 1`] = `
<Fragment>
  <Styled(ForwardRef(Grid))
    item={true}
    key="1"
    xs={12}
  >
    <Note
      depth={2}
      note={
        Object {
          "archived": false,
          "body": "The Body",
          "created_at": "",
          "id": 1,
          "parent_note_id": 0,
          "pinned": false,
          "tags": Array [],
          "title": "SingleNote 1",
          "updated_at": "",
          "user_id": -1,
        }
      }
      search=""
    />
  </Styled(ForwardRef(Grid))>
  <Styled(ForwardRef(Grid))
    item={true}
    key="4"
    xs={12}
  >
    <Note
      depth={2}
      note={
        Object {
          "archived": false,
          "body": "The Body",
          "created_at": "",
          "id": 4,
          "parent_note_id": 0,
          "pinned": false,
          "tags": Array [],
          "title": "SingleNote 4",
          "updated_at": "",
          "user_id": -1,
        }
      }
      search=""
    />
  </Styled(ForwardRef(Grid))>
  <Styled(ForwardRef(Grid))
    item={true}
    key="2"
    xs={12}
  >
    <Note
      depth={2}
      note={
        Object {
          "archived": false,
          "body": "The Body",
          "created_at": "",
          "id": 2,
          "parent_note_id": 0,
          "pinned": false,
          "tags": Array [],
          "title": "SingleNote 2",
          "updated_at": "",
          "user_id": -1,
        }
      }
      search=""
    />
  </Styled(ForwardRef(Grid))>
</Fragment>
`;
